# MorphoDig

./: .gitignore  CMakeLists.txt  LICENSE  NOTES.md  README.md  howto.txt
MorphoDig/: CMakeLists.txt  CMakeListsQT5.txt  CMakeListsQT6.txt  CMakeLists_old.txt  How_to_compile_on_Windows.txt  MorphoDig.cxx  MorphoDig.h  MorphoDig.ui  MorphoDigFine.ui  MorphoDigVersion.h.in  MorphoDig_Tabs.ui  MorphoDig_ok.ui  MorphoDig_old.ui  MorphoDigwithqvtkopengl.ui  main.cxx  version.txt
MorphoDig/Helpers/: CMakeLists.txt  vtkBezierCurveSource.cxx  vtkBezierCurveSource.h  vtkBezierSurfaceSource.cxx  vtkBezierSurfaceSource.h  vtkBezierSurfaceWidget.cxx  vtkBezierSurfaceWidget.h  vtkGridActor.cxx  vtkGridActor.h  vtkImageTransparencyFilter.cxx  vtkImageTransparencyFilter.h  vtkLM2Actor.cxx  vtkLM2Actor.h  vtkLMActor.cxx  vtkLMActor.h  vtkLMActorCollection.cxx  vtkLMActorCollection.h  vtkMDActor.cxx  vtkMDActor.h  vtkMDActorCollection.cxx  vtkMDActorCollection.h  vtkMDCubeSource.cxx  vtkMDCubeSource.h  vtkMDCylinderSource.cxx  vtkMDCylinderSource.h  vtkMDInteractorStyle.cxx  vtkMDInteractorStyle.h  vtkMDLassoInteractorStyle.cxx  vtkMDLassoInteractorStyle.h  vtkMDVolume.cxx  vtkMDVolume.h  vtkMDVolumeCollection.cxx  vtkMDVolumeCollection.h  vtkOrientationHelperActor.cxx  vtkOrientationHelperActor.h  vtkOrientationHelperWidget.cxx  vtkOrientationHelperWidget.h  vtkProbeSource.cxx  vtkProbeSource.h  vtkUndoElement.h  (+7 more)
MorphoDig/Icons/: Export_colorscale.psd  Hand.psd  Initialize.psd  Invert_Selection.psd  Logo_Software.psd  OpenSave.psd  Parameters.psd  Reorganisation.psd  Rescale.psd  display_modes.psd  icons.qrc  lighting_presets.psd  logo.ai  psClipping_plane.psd  psFlag.psd  psFlood_fill.psd  psIcons.psd  psLasso.psd  psLights.psd  psMerge.psd  psPencil.psd  psSelection_Mode.psd  psSort_vertices.psd  psTags.psd  psWand.psd  rubberBand.psd
MorphoDig/Qt/: CMakeLists.txt  QDoubleReleaseSlider.cxx  QDoubleReleaseSlider.h  QDoubleSlider.cxx  QDoubleSlider.h  QRAMThread.cxx  QRAMThread.h  QReleaseDial.cxx  QReleaseDial.h  QReleaseScrollBar.cxx  QReleaseScrollBar.h  QReleaseScrollBarValue.cxx  QReleaseScrollBarValue.h  QReleaseSlider.cxx  QReleaseSlider.h  QReleaseSliderValue.cxx  QReleaseSliderValue.h  mqAboutDialog.cxx  mqAboutDialog.h  mqAboutDialog.ui  mqAboutDialogReaction.cxx  mqAboutDialogReaction.h  mqActorTreePanel.cxx  mqActorTreePanel.h  mqActorTreePanel.ui  mqBooleanOperationDialog.cxx  mqBooleanOperationDialog.h  mqBooleanOperationDialog.ui  mqBooleanOperationDialogReaction.cxx  mqBooleanOperationDialogReaction.h  mqC2SDialog.cxx  mqC2SDialog.h  mqC2SDialog.ui  mqC2SDialogReaction.cxx  mqC2SDialogReaction.h  mqCameraControlsToolbar - Copie.ui  mqCameraControlsToolbar.cxx  mqCameraControlsToolbar.h  mqCameraControlsToolbar.ui  mqCameraControlsWidget.cxx  (+458 more)
MorphoDig/Qt/Nouveau dossier/: mqGaussianFilterDialog.cxx  mqGaussianFilterDialog.h  mqScalarsInfosDialog.cxx  mqScalarsInfosDialog.h  mqScalarsInfosDialog.ui
MorphoDig/Qt/RC/: mqui.qrc
MorphoDig/RC/: app.aps  app.rc
