set (Qt_SRCS
mqViewMenuManager.h
mqViewMenuManager.cxx
  mqActorTreePanel.cxx
  mqActorTreePanel.h
  mqAboutDialog.cxx
  mqAboutDialog.h
  mqAboutDialogReaction.cxx
  mqAboutDialogReaction.h
  mqCoreUtilities.cxx
  mqCoreUtilities.h
  mqDesktopServicesReaction.cxx
  mqDesktopServicesReaction.h
  mqReaction.cxx
  mqReaction.h
  mqCreateLMKDialogReaction.h
  mqCreateLMKDialogReaction.cxx
  mqCreateLMKDialog.h
  mqCreateLMKDialog.cxx
  mqEditLMKDialogReaction.h
  mqEditLMKDialogReaction.cxx
  mqEditLMKDialog.h
  mqEditLMKDialog.cxx
  mqEditAlphaDialogReaction.h
  mqEditAlphaDialogReaction.cxx
  mqEditAlphaDialog.h
  mqEditAlphaDialog.cxx
  mqEditFLGDialogReaction.h
  mqEditFLGDialogReaction.cxx
  mqEditFLGDialog.h
  mqEditFLGDialog.cxx
  mqEditScalarsDialog.h
  mqEditScalarsDialog.cxx
  mqEditScalarsDialogReaction.h
  mqEditScalarsDialogReaction.cxx
  mqEditACTORDialogReaction.h
  mqEditACTORDialogReaction.cxx
  mqEditACTORDialog.h
  mqEditACTORDialog.cxx
  mqEditAllFLGColorDialogReaction.h
  mqEditAllFLGColorDialogReaction.cxx
  mqEditAllFLGColorDialog.h
  mqEditAllFLGColorDialog.cxx
  mqEditAllFLGLengthDialogReaction.h
  mqEditAllFLGLengthDialogReaction.cxx
  mqEditAllFLGLengthDialog.h
  mqEditAllFLGLengthDialog.cxx
  mqGridSizeDialogReaction.h
  mqGridSizeDialogReaction.cxx
  mqGridSizeDialog.h
  mqGridSizeDialog.cxx
  mqOpenDataReaction.cxx
  mqOpenDataReaction.h
  mqSetName.cxx
  mqSaveDataReaction.cxx
  mqSaveDataReaction.h
  mqSetName.h
  mqMorphoDigMenuBuilders.cxx
  mqMorphoDigMenuBuilders.h
  mqChangeNodeReaction.h
  mqChangeNodeReaction.cxx
  mqColorChooserButton.cxx
  mqColorChooserButton.h
  mqColorDialogReaction.h
  mqColorDialogReaction.cxx
  mqCameraReaction.h
  mqDisplayReaction.cxx
  mqDisplayReaction.h
  mqCameraReaction.cxx
  mqColorDialog.cxx
  mqColorDialog.h
  mqLandmarkDialogReaction.h
  mqLandmarkDialogReaction.cxx
  mqLandmarkDialog.cxx
  mqLandmarkDialog.h
  mqMoveCurveHandlesDialog.h
  mqMoveCurveHandlesDialog.cxx
  mqUndoRedoReaction.h
  mqUndoRedoReaction.cxx
  mqUndoStack.h
  mqUndoStack.cxx
  mqObjectsControlsToolbar.h
  mqObjectsControlsToolbar.cxx
  mqCameraControlsToolbar.h
  mqCameraControlsToolbar.cxx
  mqMainControlsToolbar.h
  mqMainControlsToolbar.cxx
  mqDisplayControlsToolbar.h
  mqDisplayControlsToolbar.cxx
  mqInteractionControlsToolbar.h
  mqInteractionControlsToolbar.cxx
  mqLightControlsToolbar.h
  mqLightControlsToolbar.cxx
  mqScalarsControlsToolbar.h
  mqScalarsControlsToolbar.cxx
  mqMorphoDigCore.h
  mqMorphoDigCore.cxx
  mqSavePLYDialog.cxx
  mqSavePLYDialog.h
  mqSavePLYDialogReaction.cxx
  mqSavePLYDialogReaction.h
  mqSaveVTKDialog.cxx
  mqSaveVTKDialog.h
  mqSaveVTKDialogReaction.cxx
  mqSaveVTKDialogReaction.h
  mqSaveSTLDialog.cxx
  mqSaveSTLDialog.h
  mqSaveSTLDialogReaction.cxx
  mqSaveSTLDialogReaction.h
  mqSaveLandmarksDialog.cxx
  mqSaveLandmarksDialog.h
  mqSaveLandmarksDialogReaction.cxx
  mqSaveLandmarksDialogReaction.h
  mqSaveFlagsDialog.cxx
  mqSaveFlagsDialog.h
  mqSaveFlagsDialogReaction.cxx
  mqSaveFlagsDialogReaction.h
  mqSaveCURDialog.cxx
  mqSaveCURDialog.h
  mqSaveCURDialogReaction.cxx
  mqSaveCURDialogReaction.h
  mqSaveCURasVERDialogReaction.cxx
  mqSaveCURasVERDialogReaction.h
  mqSaveCURasVERDialog.cxx
  mqSaveCURasVERDialog.h
  mqSaveSTVDialog.cxx
  mqSaveSTVDialog.h
  mqSaveSTVDialogReaction.cxx
  mqSaveSTVDialogReaction.h
  mqSaveNTWDialog.cxx
  mqSaveNTWDialog.h
  mqSaveNTWDialogReaction.cxx
  mqSaveNTWDialogReaction.h
mqSelectLandmarkRangeDialog.h
mqSelectLandmarkRangeDialog.cxx
mqSelectLandmarkRangeDialogReaction.h
mqSelectLandmarkRangeDialogReaction.cxx
 mqOrientationLabelsDialog.cxx
  mqOrientationLabelsDialog.h
  mqOrientationLabelsDialogReaction.cxx
  mqOrientationLabelsDialogReaction.h
QDoubleSlider.cxx
QDoubleSlider.h
QReleaseSlider.cxx
QReleaseSlider.h
QReleaseDial.cxx
QReleaseDial.h
QReleaseScrollBar.cxx
QReleaseScrollBar.h
QReleaseScrollBarValue.cxx
QReleaseScrollBarValue.h
QDoubleReleaseSlider.cxx
QDoubleReleaseSlider.h
QReleaseSliderValue.cxx
QReleaseSliderValue.h
 mqSmoothDialog.cxx
  mqSmoothDialog.h
  mqSmoothDialogReaction.cxx
  mqSmoothDialogReaction.h
 mqDecimateDialog.cxx
  mqDecimateDialog.h
  mqDecimateDialogReaction.cxx
  mqDecimateDialogReaction.h
 mqFillHolesDialog.cxx
  mqFillHolesDialog.h
  mqFillHolesDialogReaction.cxx
  mqFillHolesDialogReaction.h
 mqDensifyDialog.cxx
  mqDensifyDialog.h
  mqDensifyDialogReaction.cxx
  mqDensifyDialogReaction.h
 mqTPSDialog.cxx
  mqTPSDialog.h
  mqTPSDialogReaction.cxx
  mqTPSDialogReaction.h
 mqDecomposeDialog.cxx
  mqDecomposeDialog.h
  mqDecomposeDialogReaction.cxx
  mqDecomposeDialogReaction.h
mqScalarsThicknessDialog.h
mqScalarsThicknessDialog.cxx
mqScalarsThicknessDialogReaction.h
mqScalarsThicknessDialogReaction.cxx
mqScalarsThicknessBetweenDialog.h
mqScalarsThicknessBetweenDialog.cxx
mqScalarsThicknessBetweenDialogReaction.h
mqScalarsThicknessBetweenDialogReaction.cxx

)

set (Qt_MOC_HDRS
  mqAboutDialogReaction.h
  mqAboutDialog.h
)

set (Qt_UIs mqAboutDialog.ui 
mqColorDialog.ui 
mqLandmarkDialog.ui  
mqCameraControlsToolbar.ui 
mqObjectsControlsToolbar.ui 
mqMainControlsToolbar.ui 
mqSavePLYDialog.ui 
mqSaveVTKDialog.ui 
mqSaveSTLDialog.ui 
mqSaveLandmarksDialog.ui 
mqSaveFlagsDialog.ui 
mqSaveCURDialog.ui 
mqSaveCURasVERDialog.ui 
mqSaveSTVDialog.ui
mqSaveNTWDialog.ui
mqMoveCurveHandlesDialog.ui
mqEditLMKDialog.ui
mqEditAlphaDialog.ui
mqCreateLMKDialog.ui
mqEditFLGDialog.ui
mqEditACTORDialog.ui
mqEditAllFLGColorDialog.ui
mqEditAllFLGLengthDialog.ui
mqSelectLandmarkRangeDialog.ui
mqLightControlsToolbar.ui
mqInteractionControlsToolbar.ui
mqDisplayControlsToolbar.ui
mqScalarsControlsToolbar.ui
mqGridSizeDialog.ui
mqOrientationLabelsDialog.ui
mqEditScalarsDialog.ui
mqSmoothDialog.ui
mqDecimateDialog.ui
mqDensifyDialog.ui
mqFillHolesDialog.ui
mqTPSDialog.ui
mqDecomposeDialog.ui
mqActorTreePanel.ui
mqScalarsThicknessDialog.ui
mqScalarsThicknessBetweenDialog.ui
)

set( Qt_RCs ../Icons/icons.qrc )


# We have ui files, this will bring in the macro: qt5_wrap_ui
find_package(Qt5 COMPONENTS Widgets REQUIRED QUIET)
include_directories(${Qt5Widgets_INCLUDE_DIRS})
qt5_wrap_ui(QtUI_Srcs ${Qt_UIs})
qt5_add_resources(QRC_Srcs ${Qt_RCS} )


 source_group("Resources" FILES
    ${Qt_UIs}
    ${Qt_RCs}
    
  )

  source_group("Generated" FILES
    ${QtUI_Srcs}   
    ${QRC_Srcs}   

   
  )
#for some reason, otherwise wrapped ui related .h files are not read
include_directories ("${PROJECT_BINARY_DIR}/Qt")

include_directories ("${PROJECT_SOURCE_DIR}/Helpers")



ADD_LIBRARY (MorphoDigQt ${Qt_SRCS} ${QtUI_Srcs} ${Qt_UIs}   
 

 
#${Qt_HDRS}
)




